tests/snapshots/render__run_tree_absolute_times.snap
---
source: tests/render.rs
expression: "format!(\"{}\", render(&app).backend())"
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"shop · #8 · 2 of 2 · failure ───────────────────────────────────────────────────"
"▶ ● shop/build #8                                     2023-11-14 22:21       20s"
"  └─ ○ shop/test  not reached                                                   "
"     └─ ○ shop/deploy  not reached                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" ←/→  older/newer   v  view   Enter  open build             Absolute timestamps "
