tests/snapshots/render__runs_list_opens_the_same_run_view.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ● https://ci.example.com · Jenkins 2.504.1 · me       h/?  help   ⟳ 0s "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Pipeline runs (3) ──────────────────────────────────────────────────────────────"
"▶ ● failure  shop #8                                            9m ago       20s"
"  ⟳ unstable libs/core #12                                     22m ago  22m 00s…"
"  ● partial  shop #7                                            3h ago    1m 30s"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  open run   /  filter   o  open in browser                               "
