tests/snapshots/render__settings_editing_header.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ○ not connected                                                        "
" F1 Jobs   Settings                                                             "
"Settings ───────────────────────────────────────────────────────────────────────"
"   Config file       /home/user/.config/leeroy/config.toml                      "
"                                                                                "
"   Jenkins URL       (not set)                                                  "
"   Skip TLS verify   off                                                        "
"   Proxy URL         (not set; direct connection)                               "
"   Auto-refresh      on                                                         "
"   Refresh every     10 s (default)                                             "
"   Confirm quit      on                                                         "
"                                                                                "
"   Headers                                                                      "
" ▶ + add header      Authorization: Basic s3cret█                               "
"                                                                                "
"   Extra HTTP headers sent with every request to Jenkins, e.g. for              "
"   authentication.                                                              "
"   Edit as "Name: value"; clear the field to remove it. Values are masked,      "
"   except while editing.                                                        "
"   Examples:                                                                    "
"     Authorization: Basic <base64 of user:password>                             "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  save   Esc  cancel   ↑/↓  save & move   ←/→  cursor   C-u  clear        "
" q  quit   s  settings   ?  help   r  refresh   R  toggle auto-refresh          "
