tests/snapshots/render__settings_editing_token.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ○ not connected                                                        "
"╭ Settings ────────────────────────────────────────────────────────────────────╮"
"│   Config file     /home/user/.config/leeroy/config.toml                      │"
"│                                                                              │"
"│   Jenkins URL     (not set)                                                  │"
"│   Username        (not set)                                                  │"
"│ ▶ API token       ••••••█                                                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Edit   Enter  save   Esc  cancel   C-u  clear                                  "
" q  quit   s  settings   ?  help                                                "
