tests/snapshots/render__settings_empty.snap
---
source: tests/render.rs
expression: "render_after(&[Action::OpenSettings]).backend()"
---
" Leeroy  ○ not connected                                                        "
"╭ Settings ────────────────────────────────────────────────────────────────────╮"
"│   Config file       /home/user/.config/leeroy/config.toml                    │"
"│                                                                              │"
"│ ▶ Jenkins URL       (not set)                                                │"
"│   Username          (not set)                                                │"
"│   API token         (not set)                                                │"
"│   Skip TLS verify   off                                                      │"
"│   Proxy URL         (not set; direct connection)                             │"
"│                                                                              │"
"│   Base URL of the Jenkins instance, e.g. https://jenkins.example.com         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Settings   ↑/↓  select   Enter  edit/toggle   Esc  back                        "
" q  quit   s  settings   ?  help                                                "
