tests/snapshots/render__settings_invalid_proxy.snap
---
source: tests/render.rs
expression: render_after(&actions).backend()
---
" Leeroy  ○ not connected                                              h/?  help "
" 1 Jobs   2 Builds   3 Pipelines   4 Pipeline runs                   0 Settings "
"Settings ───────────────────────────────────────────────────────────────────────"
"   Config file       /home/user/.config/leeroy/config.toml                      "
"                                                                                "
" Jenkins                                                                        "
"   Jenkins URL       (not set)                                                  "
"   Skip TLS verify   off                                                        "
" ▶ Proxy URL         ftp://proxy:21█                                            "
"                                                                                "
"   Headers                                                                      "
"   + add header                                                                 "
"                                                                                "
" Application                                                                    "
"   Auto-refresh      on                                                         "
"   Refresh every     10 s (default)                                             "
"   Confirm quit      on                                                         "
"   Theme             auto (default; terminal didn't say: dark)                  "
"                                                                                "
"   unsupported scheme "ftp": use one of http, https, socks4, socks4a, socks5,   "
"   socks5h                                                                      "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  save   Esc  cancel   ←/→  cursor   C-u  clear                           "
