tests/snapshots/render__settings_proxy_selected_with_system_fallback.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ○ not connected                                                        "
"  F1 Jobs   Settings                                                            "
"╭ Settings ────────────────────────────────────────────────────────────────────╮"
"│   Config file       /home/user/.config/leeroy/config.toml                    │"
"│                                                                              │"
"│   Jenkins URL       (not set)                                                │"
"│   Skip TLS verify   off                                                      │"
"│ ▶ Proxy URL         (not set; $HTTPS_PROXY: http://me:••••@corp-proxy:3128)  │"
"│   Auto-refresh      on                                                       │"
"│   Refresh every     10 s (default)                                           │"
"│                                                                              │"
"│   Headers                                                                    │"
"│   + add header                                                               │"
"│                                                                              │"
"│   Proxy for reaching Jenkins: scheme://[user:pass@]host:port                 │"
"│   Schemes: http, https, socks4, socks4a, socks5, socks5h.                    │"
"│   SOCKS: socks5h:// or socks4a:// resolve DNS on the proxy (remote DNS);     │"
"│   socks5:// and socks4:// resolve DNS locally. HTTP(S) proxies always resolve│"
"│   remotely.                                                                  │"
"│   Unset: HTTPS_PROXY / HTTP_PROXY / ALL_PROXY / NO_PROXY are used.           │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Settings   ↑/↓  select   Enter  edit/toggle   Esc  back                        "
" q  quit   s  settings   ?  help   r  refresh   R  toggle auto-refresh          "
