tests/snapshots/render__settings_saved_with_env_header.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ◌ https://ci.example.com · connecting…                       h/?  help "
" 1 Jobs   2 Builds   3 Pipelines   4 Runs                            0 Settings "
"Settings ───────────────────────────────────────────────────────────────────────"
"   Config file       /home/user/.config/leeroy/config.toml                      "
"                                                                                "
" Jenkins                                                                        "
" ▶ Jenkins URL       https://ci.example.com                                     "
"   Skip TLS verify   off                                                        "
"   Proxy URL         (not set; direct connection)                               "
"                                                                                "
"   Headers                                                                      "
"   Authorization     ••••••••  (from $LEEROY_JENKINS_HEADERS_AUTHORIZATION)     "
"   X-Forwarded-User  ••••••••                                                   "
"   + add header                                                                 "
"                                                                                "
" Application                                                                    "
"   Auto-refresh      on                                                         "
"   Refresh every     10 s (default)                                             "
"   Confirm quit      on                                                         "
"   Theme             auto (default; terminal didn't say: dark)                  "
"                                                                                "
"   Saved to /home/user/.config/leeroy/config.toml                               "
"────────────────────────────────────────────────────────────────────────────────"
" Enter  edit/toggle                                                             "
