tests/snapshots/render__settings_saved_with_env_override.snap
---
source: tests/render.rs
expression: render(&app).backend()
---
" Leeroy  ◌ https://ci.example.com · connecting…                                 "
"╭ Settings ────────────────────────────────────────────────────────────────────╮"
"│   Config file       /home/user/.config/leeroy/config.toml                    │"
"│                                                                              │"
"│   Jenkins URL       https://ci.example.com                                   │"
"│ ▶ Username          ci-bot  (from $LEEROY_JENKINS_USERNAME)                  │"
"│   API token         ••••••••                                                 │"
"│   Skip TLS verify   off                                                      │"
"│   Proxy URL         (not set; direct connection)                             │"
"│                                                                              │"
"│   Saved to /home/user/.config/leeroy/config.toml                             │"
"│                                                                              │"
"│   Jenkins user name for API authentication                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Settings   ↑/↓  select   Enter  edit/toggle   Esc  back                        "
" q  quit   s  settings   ?  help                                                "
