tests/snapshots/render__settings_theme_selected.snap
---
source: tests/render.rs
expression: screen
---
" Leeroy  ○ not connected                                              h/?  help "
" 1 Jobs   2 Builds                                                   0 Settings "
"Settings ───────────────────────────────────────────────────────────────────────"
"   Config file       /home/user/.config/leeroy/config.toml                      "
"                                                                                "
" Jenkins                                                                        "
"   Jenkins URL       (not set)                                                  "
"   Skip TLS verify   off                                                        "
"   Proxy URL         (not set; direct connection)                               "
"                                                                                "
"   Headers                                                                      "
"   + add header                                                                 "
"                                                                                "
" Application                                                                    "
"   Auto-refresh      on                                                         "
"   Refresh every     10 s (default)                                             "
"   Confirm quit      on                                                         "
" ▶ Theme             auto (default; light terminal detected)                    "
"                                                                                "
"   Colours: auto (the default), dark or light. Leeroy keeps the terminal's own  "
"   background; dark suits dark terminals, light suits light ones. auto picks one"
"   from the background colour the terminal reports (dark if it doesn't answer). "
"────────────────────────────────────────────────────────────────────────────────"
" ↑/↓  select   Enter  edit/toggle                                               "
